--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,11 @@ Section: devel
 Priority: optional
 Maintainer: CutefishOS <cutefishos@foxmail.com>
 Build-Depends:  cmake,
-		libqapt-dev,
-		qtbase5-dev,
-		qtdeclarative5-dev,
-		qtquickcontrols2-5-dev,
-		qttools5-dev,
-		qttools5-dev-tools,
+		qt6-base-dev,
+		qt6-declarative-dev,
+		qt6-quickcontrols2-dev,
+		qt6-tools-dev,
+		qt6-tools-dev-tools,
 		debhelper (>= 9)
 Standards-Version: 4.6.0
 Homepage: https://cutefishos.com
